Change personal info

--- a/personal.html
+++ b/personal.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="#">Back</a>
+        <a href="index.html">Back</a>
     </nav>
     <h1>Here is my personal portfolio website!</h1>
-    <h1>Wanna see them in my Insta account?</h1>
+    <h2>https://www.yilinzeng.com/</h1>
+    <h3>Instagram: elaine__zyl</h1>
 </body>
 </html>
