--- a/personal.html
+++ b/personal.html
@@ -11,7 +11,7 @@
         <a href="index.html">Back</a>
     </nav>
     <h1>Here is my personal portfolio website!</h1>
-    <h2>https://www.yilinzeng.com/</h1>
-    <h3>Instagram: elaine__zyl</h1>
+    <h2><a href="https://www.yilinzeng.com" target="_blank">https://www.yilinzeng.com</a></h2>
+    <h3>Instagram: elaine__zyl</h3>
 </body>
 </html>
