--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <h1>*Elaine's Portfolio*</h1>
         
-        <a href="work1.html" target="blank">Lost & Found</a>
+        <h3> <a href="work1.html" target="blank">Lost & Found</a>
         <br>
         <a href="work2.html" target="blank">Face Generator</a>
         <br>
