--- a/work1.html
+++ b/work1.html
@@ -16,6 +16,6 @@
     <a href="https://editor.p5js.org/zenge232/sketches/VviMvTxLm" target="_blank">Lost & Found</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="lostobject.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p>Drew a lost object described to you in plain language through code.</p >
 </body> 
 </html>
