--- a/work2.html
+++ b/work2.html
@@ -16,6 +16,7 @@
     <a href="https://editor.p5js.org/zenge232/sketches/tIb_NdGIM" target="_blank">Face Generator</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="face.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p>Created a simple generator that will create multiple variations of the form through mouse or keyboard interactions. 
+    </p >
 </body> 
 </html>
