--- a/work4.html
+++ b/work4.html
@@ -16,6 +16,7 @@
     <a href="https://editor.p5js.org/zenge232/sketches/u3AEUm1wa" target="_blank">Optical Illusion</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="optical.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p>Designed and coded an animating optical illusion and consider its deployment.
+    </p >
 </body> 
 </html>
