--- a/work5.html
+++ b/work5.html
@@ -16,6 +16,6 @@
     <a href="https://editor.p5js.org/zenge232/sketches/MjXC-RUZZ" target="_blank">Data Portrait</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="data.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p>Created a data portrait out of a personal habit of mine.</p >
 </body> 
 </html>
