--- a/work6.html
+++ b/work6.html
@@ -16,6 +16,7 @@
     <a href="https://editor.p5js.org/zenge232/sketches/QAOTGYI0e" target="_blank">Autobiographical Game</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="Game.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p> Designed and coded a game that tells an aspect of my own story.
+    </p >
 </body> 
 </html>
