--- a/personal.html
+++ b/personal.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="index.html">Back</a>
     </nav>
-    <h1>Here is my personal portfolio website!</h1>
+    <h1>Personal Portfolio Website</h1>
     <h2><a href="https://www.yilinzeng.com" target="_blank">https://www.yilinzeng.com</a></h2>
     <h3>Instagram: elaine__zyl</h3>
 </body>
