--- a/work3.html
+++ b/work3.html
@@ -16,6 +16,7 @@
     <a href="https://editor.p5js.org/zenge232/sketches/F5XY0jKzg" target="_blank">Experimental Clock</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="clock.js"></script>
-    <p>Draw an object described to you in plain language through code.</p >
+    <p>Designed and coded an experimental clock that expresses a novel way of tracking time. 
+    </p >
 </body> 
 </html>
