--- a/personal.html
+++ b/personal.html
@@ -12,6 +12,6 @@
     </nav>
     <h1>Personal Portfolio Website</h1>
     <h2><a href="https://www.yilinzeng.com" target="_blank">https://www.yilinzeng.com</a></h2>
-    <h3>Instagram: elaine__zyl</h3>
+    <h2><a href="https://instagram.com/elaine__zyl/" target="_blank">Instagram: elaine__zyl</h2>
 </body>
 </html>
