--- a/work6.html
+++ b/work6.html
@@ -16,7 +16,9 @@
     <a href="https://editor.p5js.org/zenge232/sketches/QAOTGYI0e" target="_blank">Autobiographical Game</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="Game.js"></script>
-    <p> Designed and coded a game that tells an aspect of my own story.
+    <p> This game was made as a memorial for my past pet dwarf rabbit Pudding. In the game, the player becomes Pudding, who is in Rabbit space with a mission of returning to Earth to find Pudding's past memories. By collecting carrots, the player finds an image related to a memory. 
     </p >
+    <p>   The scenes are hand drawn in procreate that represent the actual look of the space of my home in Vancouver. The images are placed exactly in the place they are taken. 
+    </p>
 </body> 
 </html>
