added working in progress page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
     <main>
         <h1>*Elaine's Portfolio*</h1>
+
+        <h5>
+            <a href="workinprogress1.html" target="blank">Work in Progress</a>
+
+
+
+        </h5>
         
         <h3>
             <a href="work1.html" target="blank">Lost & Found</a>
