--- a/workinprogress1.html
+++ b/workinprogress1.html
@@ -1,32 +1,35 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" href="stylesheet4grid.css">
-    <title>personal</title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>CSS Grid</title>
+  </head>
+  <body>
+    
     <nav>
         <a href="index.html">Back</a>
     </nav>
-    
-    <a href="https://editor.p5js.org/zenge232/sketches/VviMvTxLm" target="_blank">Project 1</a>
-    <div id="sketch-container1"></div> <!-- 容器 -->
-    <script src="project js"></script>
-    <p></p >
-</body> 
-</html>
 
- <tittle>Flexbox</tittle>
-</head>
-<body> 
-<div class="container">
-    <div class="item item-1">Item 1</div>
-    <div class="item item-1">Item 1</div>
-    <div class="item item-1">Item 1</div>
-</div>
-</body>
+
+    <div class="container">
+      <div class="item item-1">1</div>
+      <div class="item item-2">2</div>
+      <div class="item item-3">3</div>
+      <div class="item item-4">4</div>
+    </div>
+
+    <div class="container-2">
+        <div class="item item-5">A</div>
+        <div class="item item-6">B</div>
+        <div class="item item-7">C</div>
+        <div class="item item-8">D</div>
+      </div>
+  </body>
 </html>
