Added Camera Filter Project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
         <h5>
             <a href="workinprogress1.html" target="blank">Work in Progress</a>
-
+            <br>
+            <a href="worknew1.html" target="blank">Work New</a>
 
 
         </h5>
