--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h5>
             <a href="workinprogress1.html" target="blank">Work in Progress</a>
             <br>
-            <a href="worknew1.html" target="blank">Work New</a>
+            <a href="worknew1.html" target="blank">Camera Filter</a>
 
 
         </h5>
