--- a/worknew1.html
+++ b/worknew1.html
@@ -16,7 +16,7 @@
     <a href="https://editor.p5js.org/zenge232/sketches/mSE0XrcYH" target="_blank">Astigmatism Camera Filter</a>
     <div id="sketch-container1"></div> <!-- 容器 -->
     <script src="camera.js"></script>
-    <p>Created a simple generator that will create multiple variations of the form through mouse or keyboard interactions. 
+    <p>In this project, I want to explore how to visualize my gradual astigmatism experience. I want to explore the effect of cut-out grids, color, and blur. How can I reconcile this experience with a camera filter?  
     </p >
 </body> 
 </html>
