added the survey project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="workinprogress1.html" target="blank">Work in Progress</a>
             <br>
             <a href="worknew1.html" target="blank">Camera Filter</a>
+            <br>
+            <a href="worknew2.html" target="blank">Camera Filter</a>
 
 
         </h5>
