Edited style and tittle name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <br>
             <a href="worknew1.html" target="blank">Camera Filter</a>
             <br>
-            <a href="worknew2.html" target="blank">Camera Filter</a>
+            <a href="worknew2.html" target="blank">Dance Studio Survey</a>
 
 
         </h5>
