--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>*Elaine's Portfolio*</h1>
 
         <h5>
-            <a href="workinprogress1.html" target="blank">Work in Progress</a>
+            <a href="findyourcat.html" target="blank">Find Your Cat</a>
             <br>
             <a href="worknew1.html" target="blank">Camera Filter</a>
             <br>
